--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Fix my ARB",
   "description": "Automatically corrects syntax errors in ARB files",
   "version": "1.0.0",
-  "publisher": "Florian Schmitz",
+  "publisher": "coodooGmbH",
   "engines": {
     "vscode": "^1.80.0"
   },
@@ -42,6 +42,9 @@
   "bugs": {
     "url": "https://github.com/coodoo-io/fix-my-arb/issues"
   },
+  "activationEvents": [
+    "onCommand:extension.fixMyArb"
+  ],
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
