--- a/package.json
+++ b/package.json
@@ -54,17 +54,19 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.80.0",
 		"@types/glob": "^8.1.0",
 		"@types/mocha": "^10.0.1",
 		"@types/node": "20.2.5",
+		"@types/sinon": "^10.0.15",
+		"@types/vscode": "^1.80.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
+		"@vscode/test-electron": "^2.3.2",
 		"eslint": "^8.41.0",
 		"glob": "^8.1.0",
 		"mocha": "^10.2.0",
-		"typescript": "^5.1.3",
-		"@vscode/test-electron": "^2.3.2"
+		"sinon": "^15.2.0",
+		"typescript": "^5.1.3"
 	},
 	"__metadata": {
 		"id": "d9527cf8-8991-4d39-8d4f-b969ef1d432e",
